update email address

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "Emory University"
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=pradeeban+kathiravelu"
   googlescholar    : "https://scholar.google.com/citations?user=k1PYH8sAAAAJ"
-  email            : "kk.pradeeban -at- gmail.com"
+  email            : "pkathiravelu@alaska.edu"
   researchgate     : "https://www.researchgate.net/profile/Pradeeban-Kathiravelu"
   blog             : "https://kkpradeeban.blogspot.com"
   uri              :
