--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Pradeeban Kathiravelu, Ph.D."
   avatar           : "profile.png"
   bio              : "Distributed Systems Researcher"
-  location         : "Atlanta, GA, USA"
-  employer         : "Emory University"
+  location         : "Anchorage, AK, USA"
+  employer         : "University of Alaska Anchorage"
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=pradeeban+kathiravelu"
   googlescholar    : "https://scholar.google.com/citations?user=k1PYH8sAAAAJ"
   email            : "pkathiravelu@alaska.edu"
