--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   tumblr           :
   twitter          : "pradeeban"
   vine             :
-  weibo            :
+  wechat           : "kkpradeeban"
   xing             :
   youtube          :
   wikipedia        :
