--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,8 @@ author:
   tumblr           :
   twitter          : "pradeeban"
   vine             :
-  wechat           : "kkpradeeban"
+  wechat           : "wechat/kkpradeeban"
+  qq               : "QQ/1191936251"
   xing             :
   youtube          :
   wikipedia        :
