--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   wechat           : "wechat/kkpradeeban"
   qq               : "QQ/1191936251"
   xing             :
-  youtube          :
+  youtube          : "kkpradeeban"
   wikipedia        :
 
 
