--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   email            : "pkathiravelu@alaska.edu"
   researchgate     : "https://www.researchgate.net/profile/Pradeeban-Kathiravelu"
   blog             : "https://kkpradeeban.blogspot.com"
-  uri              :
+  uri              : "https://www.uaa.alaska.edu/academics/college-of-engineering/departments/computer-science-and-engineering/faculty-bios-cse/pradeeban-kathiravelu.cshtml"
   bitbucket        :
   codepen          :
   dribbble         :
