--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Open Source"
-    url: /foss/
-
-  - title: "UAA"
-    url: /uaa/
+  - title: "Projects"
+    url: /projects/
 
   - title: "CV"
     url: /cv/
