--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Pradeeban Kathiravelu, Ph.D."
   avatar           : "profile.png"
-  bio              : "Distributed Systems Researcher"
+  bio              : "Assistant Professor of Computer Science"
   location         : "Anchorage, AK, USA"
   employer         : "University of Alaska Anchorage"
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=pradeeban+kathiravelu"
