--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pradeeban Kathiravelu, Ph.D."
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Assistant Professor of Computer Science"
   location         : "Anchorage, AK, USA"
   employer         : "University of Alaska Anchorage"
