--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpeg"
   bio              : "Assistant Professor of Computer Science"
   location         : "Anchorage, AK, USA"
-  employer         : "University of Alaska Anchorage"
+  employer         : "University of Alaska"
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=pradeeban+kathiravelu"
   googlescholar    : "https://scholar.google.com/citations?user=k1PYH8sAAAAJ"
   email            : "pkathiravelu@alaska.edu"
@@ -112,7 +112,6 @@ author:
   tumblr           :
   twitter          : "pradeeban"
   vine             :
-  wechat           : "wechat/kkpradeeban"
   xing             :
   youtube          : "kkpradeeban"
   wikipedia        :
